# deterministic-replay-audit

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.repro  Makefile  README.md  REVIEWER_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: App.tsx  api.ts  format.ts  index.css  useTableSort.ts
paper/data/: DATA_HASHES.txt  adversarial_scenarios.json  ai_advisor_audit_reference.json  ai_advisor_scenarios.json  price_backtest_reference.json  returns_matrix.csv  review_dashboard.html
paper/figures/: audit_boundary.tikz
scripts/: build_adversarial_scenarios.py  build_review_dashboard.py  check_artifact_privacy.py  check_figure_vectors.sh  collect_advisor_runs.py  configure_env.sh  estimate_advisor_budget.py  hash_data.py  moat_compounding_analysis.py  paper_plot_style.py  price_backtest.py  reviewer_check.py  reviewer_metrics.py  run_advisor_experiment.py  run_ai_advisor_audit.py  run_experiments.py  run_frontier_sweep.sh  run_interleaved_campaign.py  start.sh  threshold_sensitivity.py  verify.sh
src/arenawealth/: __init__.py  fee_contract.py
tests/: conftest.py  test_user_portfolio_api.py
tests/fixtures/: seed_portfolio_broker.csv
tests/integration/: test_user_scenarios.py
tests/sprint1/: conftest.py  test_analytics_deployment_mip.py
tests/unit/: test_adversarial_scenarios.py  test_advisor_prompts.py  test_ai_advisor_benchmark.py  test_analytics_allocators.py  test_analytics_backtest.py  test_analytics_deployment.py  test_analytics_fundamentals.py  test_analytics_performance.py  test_analytics_scoring.py  test_analytics_screening.py  test_analytics_snapshots.py  test_csv_importer.py  test_domain_money.py  test_domain_portfolio.py  test_dtos.py  test_experiments.py  test_fee_sensitivity.py  test_hash_data.py  test_llm_budget.py  (+10 more)
(+835 files in other folders)
