[project]
name = "arenawealth"
version = "0.1.0"
description = "Deterministic, replayable audit artifact for AI investment recommendations"
readme = "README.md"
requires-python = ">=3.11"
license = "BUSL-1.1"
authors = [{ name = "Anonymous Authors" }]

dependencies = [
    "pydantic>=2.11",
    "httpx>=0.28",
    "requests>=2.32",
    "yfinance>=0.2",
    "polars>=1.0",
    "python-dotenv>=1.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.22",
    "pulp>=3.3.2",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9",
]
dev = [
    "matplotlib>=3.10",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff==0.15.18",  # pinned: lint results must be reproducible across installs
    "mypy>=1.15",
]
quant = [
    "cvxpy>=1.6",
    "scipy>=1.15",
    "quantstats>=0.0.64",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arenawealth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "integration: API scenario or integration tests (may use TestClient + SQLite)",
]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]
extend-exclude = [
    ".uv-cache",
    "archive",
    "data",
    "exports",
    "frontend",
    "src/api",
    "src/services",
]

[tool.ruff.lint]
select = [
    "E", "W",     # pycodestyle
    "F",           # pyflakes
    "I",           # isort
    "N",           # pep8-naming
    "UP",          # pyupgrade
    "B",           # bugbear
    "SIM",         # simplify
    "RUF",         # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
# The dashboard generator embeds an HTML/CSS template; long style lines are inherent.
"scripts/build_review_dashboard.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
